--- a/src/styles/characteristics.css
+++ b/src/styles/characteristics.css
@@ -1,14 +1,31 @@
+* {
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'Karla', sans-serif;    
+}
+
+.characteristics-container {
+    width: 190px;
+}
 .characteristic {
     display: flex;
     align-items: center;
-    width: 180px;
     margin-top: 5px;
     border-bottom: 1px solid #eee;
     padding-bottom: 4px;
 }
 
-.characteristicLabel, .remainingLabel {
-    font-family: Arial, Helvetica, sans-serif;
+.remaining {
+    display: flex;
+    align-items: center;
+    width: 136px;
+}
+
+.remainingLabel {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.characteristicLabel {
     font-weight: bold;
     margin-right: auto;
     font-size: 1rem;
@@ -16,30 +33,29 @@
 
 .remainingValue {
     border: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 1.3rem;
-    margin-left: 20px;
+    font-size: 1.2rem;
+    text-align: center;
+    width: 30px;
 }
 
 .characteristicValue {
     width: 30px;
     text-align: center;
-    font-size: 1rem;
-    margin-right: 5px;
+    font-size: 1.2rem;
+    margin-right: 0px;
+    border: none;
 }
 
 .inc-dec-button {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     margin: 0 2px 0 0;
     padding: 0;
     background-color: #776666;
     color: #eeeeee;
     border: none;
     font-size: 1rem;
-    font-weight: bolder;
-    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
 }
