Added information tooltips for generation type and house ruled weight

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,8 @@
 .app-container {
-    display: flex;
-    align-items: baseline;
+  display: flex;
+  align-items: baseline;
+}
+
+.info {
+  cursor: help;
 }
